--- a/content/en/docker/a21.Docker-Compose-volumes.md
+++ b/content/en/docker/a21.Docker-Compose-volumes.md
@@ -1,6 +1,6 @@
 ---
-title: "Docker Compose Volume Mount"
-slug: "Docker-Compose-Volume-Mount"
+title: "Compose Volume Mount"
+slug: "Compose-Volume-Mount"
 ---
 
 #### Lets build docker compose file 
